

********************************************************************
						V1.3
********************************************************************




#### BUG : Customer UI
********************************************************************
from the user portal, i'm able to add more than 5 callerID eventhough i just set limit_callerid = 2. Is it a BUG or just i'm having this problem?
http://forum.asterisk2billing.org/viewtopic.php?t=2250


#### MISC
********************************************************************
- Change qualify to 7 chars : 
	db change mysql :
		ALTER TABLE cc_iax_buddies CHANGE qualify qualify char(7);
		ALTER TABLE cc_sip_buddies CHANGE qualify qualify char(7);
	db change psql :
		ALTER TABLE cc_iax_buddies ALTER COLUMN qualify TYPE char(7);
		ALTER TABLE cc_sip_buddies ALTER COLUMN qualify TYPE char(7);
	
- Correction on alarm spelling
- Add export rates csv & xml
- BUG : wrong audio file prepaid-enter-pin-number.gsm
- BUG : peer sip iax qualify & nat & sip/iax info on Customer UI display 
- UPDATE : scrollbar on textarea
- UPDATE : naming on batch update
- UPDATE : Help files
- UPDATE : remove paypal section from conf files
- UPDATE : Display ratecard 100% wide
- BUG : Reporting


#### NEW LOGO ON MAIN PAGE
********************************************************************


#### MOVE THIS IN CONF FILE
********************************************************************
	and this the a2billing-callback-daemon:
	
	####### ASTERISK MANAGER ######
	my $manager_host = "localhost";
	my $manager_username = "myasterisk";
	my $manager_secret = "mycode"; 

use a2billing.conf
[global]
; MANAGER CONNECTION PARAMETERS
manager_host = localhost
manager_username = myasterisk
manager_secret = mycode


#### FILE USED ?
********************************************************************
trunk/A2BCustomer_UI/lib/epayment/includes/PP_header.php
trunk/A2Billing_UI/lib/epayment/includes/PP_header.php

To remove : 